Fixed line spacing for mobile users

--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -48,3 +48,9 @@
     color: rgba(256, 256, 256, 0.8);
     line-height: 1rem;
   }
+
+  @media only screen and (max-width: 1020px) {
+    .Track-information {
+      height: 120px;
+    }
+  }
